inline style removed and collapsable buttons fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -684,4 +684,36 @@ body { height: 100%; min-height: 100%; min-width: 736px; margin: 0px; overflow:a
 
 .section-head {
 	text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
+}
+
+.collapse {
+	position:absolute; 
+	top:2px; 
+	left:3px; 
+	z-index:1; 
+	color:#3498DB; 
+}
+.settings-option {
+	color:#ffffff;opacity:0.0;
 }	
+#settings {
+	   -webkit-text-stroke-width: 1px;
+   -webkit-text-stroke-color: white;
+}
+#settings-drop-down {
+	display:none;
+}
+#dialog {
+	display:none;position:fixed;top:300px;width:200px;height:250px;background-color:#70B8FF  ;text-align:center;left:43%;border-radius:10px;box-shadow:2px 2px 2px 2px #888888;  
+}
+
+#hc_login {
+	position:relative;top:20px;
+}
+.settings {
+	color:#333;
+} 
+
+.settings-done{
+	color:#009900;
+}
